--- a/dev.html
+++ b/dev.html
@@ -35,7 +35,7 @@
     <!-- Navbar -->
     <div class="container">
       <nav class="d-flex justify-content-between align-items-center">
-        <img src="" alt="Logo" />
+        <img src="" />
         <ul class="nav-links">
           <li><a href="index.html">Homepage</a></li>
           <li><a href="about.html">About Me</a></li>
